# nepeta

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
documentation/: file-format.md  format-examples.md  how-to.md  main-page.md  quickstart.md
example/: basic_usage.cpp  hello_world.cpp  read_file.cpp
self-contained/: nepeta.h
src/: nepeta.h  nepeta_algorithm.h  nepeta_base64.h  nepeta_parser.h  nepeta_parser_detail.h  nepeta_parser_specialization.h  nepeta_traits.h  nepeta_writer.h  nepeta_writer_detail.h
test/: nepeta_algorithm.cpp  nepeta_reader.cpp  nepeta_writer.cpp  simple_performance.cpp  test_helpers.h  test_main.cpp
tools/: kate-syntax-nepeta.xml  make-self-contained.sh
